# feusic

./: .gitignore  .preferences  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs  phasic_player.rs  source_repeat_n.rs
src/core/: mod.rs
src/core/feusic/: loader.rs  mod.rs
src/core/player/: controller.rs  mod.rs  read_seek_source.rs  shared_data.rs  timer.rs
src/core/playlist/: loader.rs
src/core/youtube/: downloader.rs
src/ui/: mod.rs  view.rs
src/ui/egui/: controls.rs  extras.rs  mod.rs  playlist.rs  tabs.rs  view.rs  youtube_screen.rs
src/ui/terminal/: mod.rs
