[package]
name = "feusic"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
winit = { version = "0.30.0", default-features = false, features = [
    "rwh_05",
    "x11",
    "rwh_06",
] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
zip = "2.2.2"
egui = "0.30.0"
eframe = "0.30.0"
kira = { git = "https://github.com/Pmyl/kira", branch = "decibel-ease" }
symphonia = "0.5.4"
