[package]
name = "feusic"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
winit = { version = "0.30.0", default-features = false, features = [
    "rwh_05",
    "x11",
    "rwh_06",
] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
zip = "2.2.2"
egui = "0.30.0"
eframe = "0.30.0"
kira = "0.10.1"
symphonia = "0.5.4"
rfd = "0.15.2"
egui_extras = "0.30.0"
serde_json = "1.0.135"
